--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -331,7 +331,33 @@
     <string name="skip_xposedminversion_check">略過 \'Xposed 最低版本\' 檢查</string>
     <string name="skip_xposedminversion_check_summ">略過模組 \'Xposed 最低版本\' 檢查</string>
     <string name="detected_as">檢測 SDK： %1$d, CPU架構： %2$s</string>
+    <string name="official">Official</string>
+    <string name="systemless">Systemless</string>
+    <string name="samsung">Samsung</string>
+    <string name="miui">MIUI</string>
+ 
+    <!-- Start compatibility -->
+    <string name="official_compatibility">All AOSP and Samsung ROM; Nexus, LG, HTC, Asus devices</string>
+    <string name="official_incompatibility">No incompatibility</string>
+    <string name="official_compatibility_v21">All AOSP ROM, Nexus, LG, HTC, Huawei, Asus devices</string>
+    <string name="official_incompatibility_v21">Samsung ROMs</string>
+    <string name="systemless_compatibility">All AOSP-based ROMs, Samsung ROMs; Nexus, LG, HTC, Asus, Pixel C devices</string>
+    <string name="systemless_incompatibility">No incompatibility</string>
+    <string name="samsung_compatibility">All AOSP and Samsung ROM; Nexus, LG, HTC, Asus devices. <b>Note: alt</b> version is for Samsung Note phones</string>
+    <string name="samsung_incompatibility">No incompatibility</string>
+    <string name="miui_compatibility">Only MIUI ROMs</string>
+    <string name="miui_incompatibility">All other ROMs</string>
+    <!-- End compatibility -->
+ 
+    <string name="compatibility">Compatibility</string>
     <string name="details">細節</string>
     <string name="look_and_feel">界面外觀</string>
-    
+    <string name="support_xda">Get support on XDA thread</string>
+    <string name="android_sdk">Android %1$s %2$s (API %3$d)</string>
+    <string name="later">Later</string>
+    <string name="device_own">You own a %1$s device with a %2$s ROM.</string>
+    <string name="original_framework">Your device is compatible with the official Xposed Framework.</string>
+    <string name="goto_framework">Click here to go to the right section for your device</string>
+    <string name="save">Save</string>
+
 </resources>
